# rshui

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  common.toml  config.rs  courier.toml  hui.toml  rshui.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs
courier/: Cargo.toml
courier/src/: config.rs  main.rs
docs/: code_style.md  goal_omissions.md  goals.md  todo.md  todo.txt
hui/: Cargo.toml
hui/src/: config.rs  main.rs  menu.rs
src/: color.rs  config.rs  main.rs  menu.rs
