# SPDX-License-Identifier: GPL-2.0-or-later
# Copyright (C) 2023  Andy Frank Schoknecht

[package]
name = "hui"
version = "0.0.0"
authors = ["SchokiCoder <afschoknecht@tutanota.com>"]
repository = "https://github.com/SchokiCoder/rshui"
edition = "2021"
license = "GPL-2.0-or-later"
readme = "README.md"
publish = false

[dependencies]
termion="2.*.*"
