[package]
name = "hui"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }
serde.workspace = true
termion.workspace = true
toml.workspace = true
